Atualização da Estrutura do Sistema

--- a/02 - Lista Telefonica/index.html
+++ b/02 - Lista Telefonica/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lista Telefônica</title>
+        
+        <!-- libs CSS -->
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.4.1-dist/css/bootstrap.css">
 
         <style>
@@ -24,12 +26,11 @@
 
         </style>
 
-
-        <!-- Libs -->
+        <!-- libs -->
         <script src="../lib/angular-1.8.2/angular.js"></script>
 
 
-        <!-- Scripts -->
+        <!-- scripts -->
         <script>
             angular.module("ListaTelefonica",[]);
             angular.module("ListaTelefonica").controller("ListaTelefonicaController",function($scope){
