--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
          <!--directives -->
          <script src="js/directives/uiAlertDirective.js"></script>
          <script src="js/directives/uiDate.js"></script>
+         <script src="js/directives/uiAccordionDirective.js"></script>
 
          <!--parametrização de ambiente -->
          <script src="js/value/configValue.js"></script>
@@ -42,8 +43,20 @@
     </head>
     <body ng-controller="listaTelefonicaController">
         <div class="jumbotron">
-            <h3>{{app}}</h3>
+           
+            
+            <ui-accordions>
+                <ui-accordion title="Accordion 1">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </ui-accordion>
 
+                <ui-accordion title="Accordion 2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </ui-accordion>
+            </ui-accordions>
+
+            <hr/>
+            <h3>{{app}}</h3>
             <!--
             <ui-alert title="Ops, aconteceu um problema!">
                 Não foi possível carregar os dados !
